--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -8,7 +8,7 @@ on:
     tags:
     - 'v*'
   #  branches: 
-  #    - main
+  #    - master
   schedule:
     - cron: '12 */3 * * *'
   watch:
@@ -20,7 +20,7 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@master
     - name: Set up Python #安装python
       uses: actions/setup-python@v1
       with:
@@ -54,6 +54,7 @@ jobs:
         git add .
         git commit -m "update new refresh_token" -a
     - name: Push changes
-      uses: ad-m/github-push-action@main
+      uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+branch: master
